Added images to images directory. Created base css style files. Updated template html files to link to main.css

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -4,6 +4,7 @@
     <title>About Me</title>
     <meta charset="UTF-8"/>
     <meta name="About Me" content="About me page with information about Jordan Gillard"/>
+    <link rel="stylesheet"type="text/css" href="../styles/main.css">
 </header>
 <body>
 <h1>About Me</h1>
