--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -4,6 +4,7 @@
     <title>A Blog Post</title>
     <meta charset="UTF-8">
     <meta name="Blog Post" content="Lorem Ipsum Blog Post">
+    <link rel="stylesheet"type="text/css" href="../styles/main.css">
 </header>
 <body>
 <h1>Sample Blog Post</h1>
