--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <title>Jordan's Personal Blog</title>
     <meta charset="UTF-8"/>
     <meta name="Jordans personal blog" content="A demo personal blog for Udacity's Frontend Nanodegree Program">
+    <link rel="stylesheet"type="text/css" href="../styles/main.css">
 </head>
 <body>
 <header>
@@ -12,12 +13,17 @@
         <a href="about_me.html">About Me</a>
     </nav>
 </header>
-<div>
-    <a href="blog_post.html">Blog Post 1</a>
-    <a href="blog_post.html">Blog Post 2</a>
-    <a href="blog_post.html">Blog Post 3</a>
-    <a href="blog_post.html">Blog Post 4</a>
+<div id="blogPostsList">
+    <a href="blog_post.html" id="blog_1">Blog Post 1</a>
+    <a href="blog_post.html" id="blog_2">Blog Post 2</a>
+    <a href="blog_post.html" id="blog_3">Blog Post 3</a>
+    <a href="blog_post.html" id="blog_4">Blog Post 4</a>
 </div>
+<aside>
+    <a href="https://gitlab.com/Jordan-Gillard">Gitlab</a>
+    <a href="https://github.com/Jordan-Gillard">Github</a>
+    <a href="https://www.linkedin.com/in/jordan-gillard/">LinkedIn</a>
+</aside>
 <footer>
     <p>This blog was built for Udacity's Frontend Nanodegree Program</p>
 </footer>
