Grid layout changes for tablet and phone size. Added custom google fonts for headers and other text.

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
         <a href="about_me.html">About Me</a>
     </nav>
 </header>
-<div id="blogPostsList">
-    <a href="blog_post.html" id="blog_1">Blog Post 1</a>
-    <a href="blog_post.html" id="blog_2">Blog Post 2</a>
-    <a href="blog_post.html" id="blog_3">Blog Post 3</a>
-    <a href="blog_post.html" id="blog_4">Blog Post 4</a>
+<div class="blogPostsList">
+    <a href="blog_post.html" class="blogPostLink" id="blog1">Blog Post 1</a>
+    <a href="blog_post.html" class="blogPostLink" id="blog2">Blog Post 2</a>
+    <a href="blog_post.html" class="blogPostLink" id="blog3">Blog Post 3</a>
+    <a href="blog_post.html" class="blogPostLink" id="blog4">Blog Post 4</a>
 </div>
 <aside>
     <a href="https://gitlab.com/Jordan-Gillard">Gitlab</a>
