--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -8,7 +8,10 @@
 </header>
 <body>
 <h1>About Me</h1>
-<img src="../images/headshot.jpeg" width="200px">
+<figure>
+    <img src="../images/headshot.jpeg" alt="A headshot of Jordan" width="200px">
+    <figcaption>The author of this website, and clearly an html/css genius, Jordan Gillard</figcaption>
+</figure>
 <p>
     My name is Jordan Gillard. I'm an experienced Python developer from Chicago, who currently lives in Berlin, Germany.
     I want to become a fullstack developer, but I'm inexperienced with frontend development. I am currently doing
