--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -9,34 +9,35 @@
 <body>
 <h1>Sample Blog Post</h1>
 <div>March 26th, 2020</div>
+<article>
 <p>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam urna eros, mattis in gravida semper, dictum vel est.
+    <strong>Lorem ipsum dolor sit amet</strong>, consectetur adipiscing elit. Etiam urna eros, mattis in gravida semper, dictum vel est.
     Duis hendrerit enim luctus lorem auctor, in mattis ex tincidunt. Nullam eu pellentesque metus. Vivamus ornare
     molestie enim, ultrices rutrum tortor posuere at. Donec eu arcu quam. Nullam vitae gravida eros. Cras nec pulvinar
     eros, et rutrum nisl. Vivamus quis mauris laoreet, sollicitudin ipsum eu, ullamcorper magna. Ut consequat fringilla
     vestibulum. Sed bibendum convallis velit, non laoreet justo blandit sit amet. Sed nec felis augue. Integer
-    sollicitudin lobortis dignissim. Etiam consequat varius velit vitae iaculis. Aliquam et porta nibh, id scelerisque
+    sollicitudin lobortis dignissim. <em>Etiam consequat varius velit</em> vitae iaculis. Aliquam et porta nibh, id scelerisque
     augue. Praesent aliquet metus vitae fringilla consectetur.
 </p>
 <p>
-    Aliquam egestas quam eget erat cursus efficitur. Proin ut dictum justo, a blandit nisl. Duis non mi mi. Nunc et
+    <u>Aliquam egestas quam eget erat cursus efficitur.</u> Proin ut dictum justo, a blandit nisl. Duis non mi mi. Nunc et
     sollicitudin lorem. Sed vel vulputate mauris, eu fringilla metus. Aenean dictum molestie sollicitudin. Sed in erat a
     nunc auctor sollicitudin rhoncus eu nisi. Vestibulum nec enim lacus. Duis gravida sed odio vel auctor. Phasellus
     tempor sapien at tristique ultricies.
 </p>
 <p>
-    Nullam mattis diam leo, et ultrices lacus aliquam sed. Donec in tellus ipsum. Quisque tincidunt et neque scelerisque
+    <em>Nullam mattis diam leo, et ultrices lacus aliquam sed. Donec in tellus ipsum. Quisque tincidunt et neque scelerisque
     consectetur. Sed ipsum nisi, laoreet a dui vitae, semper volutpat risus. Integer elementum ultrices leo, at mattis
     dolor varius nec. Curabitur lacinia urna sagittis felis hendrerit mattis. Praesent eu sem erat. Donec eget sapien
-    ex.
+        ex.</em>
 </p>
 <p>
-    Mauris molestie tortor id est imperdiet, at rhoncus leo varius. Cras eu placerat turpis. Cras luctus eget nibh non
+    <blockquote cite="https://lipsum.com">Mauris molestie tortor id est imperdiet, at rhoncus leo varius. Cras eu placerat turpis. Cras luctus eget nibh non
     blandit. Nam ullamcorper blandit ante, in porttitor dolor vehicula nec. Donec nec magna sit amet neque ornare
     sagittis quis eu turpis. Suspendisse sed porta magna, sed lacinia elit. Phasellus feugiat commodo sapien, vel
     laoreet sapien. Cras dignissim dolor dui, nec rhoncus diam gravida eget. Nunc rhoncus diam orci, id facilisis elit
     venenatis in. Nunc at semper arcu, vel tincidunt mauris. Integer interdum condimentum tellus, id maximus mauris
-    tincidunt ac.
+    tincidunt ac.</blockquote>
 </p>
 <p>
     Suspendisse quis augue sit amet lacus congue efficitur. Nam lobortis felis ac volutpat ultrices. Proin tempus nisi
@@ -44,6 +45,7 @@
     viverra tortor placerat. Pellentesque vehicula enim ac nibh venenatis iaculis. Cras in sapien porta, tincidunt metus
     id, dictum velit. Nulla facilisi. Duis id facilisis mi, ac sagittis lacus.
 </p>
+</article>
 </body>
 <footer>
     <a href="index.html">Back to home.</a>
