--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <title>Jordan's Personal Blog</title>
     <meta charset="UTF-8"/>
     <meta name="Jordans personal blog" content="A demo personal blog for Udacity's Frontend Nanodegree Program">
-    <link rel="stylesheet"type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
 </head>
 <body>
 <header>
@@ -13,11 +13,20 @@
         <a href="about_me.html">About Me</a>
     </nav>
 </header>
+<h2>My Latest Blog Posts</h2>
 <div class="blogPostsList">
-    <a href="blog_post.html" class="blogPostLink" id="blog1">Blog Post 1</a>
-    <a href="blog_post.html" class="blogPostLink" id="blog2">Blog Post 2</a>
-    <a href="blog_post.html" class="blogPostLink" id="blog3">Blog Post 3</a>
-    <a href="blog_post.html" class="blogPostLink" id="blog4">Blog Post 4</a>
+    <a href="blog_post.html" class="blogPostLink" id="blog1">
+        <h3>Blog Post 1</h3>
+    </a>
+    <a href="blog_post.html" class="blogPostLink" id="blog2">
+        <h3>Blog Post 2</h3>
+    </a>
+    <a href="blog_post.html" class="blogPostLink" id="blog3">
+        <h3>Blog Post 3</h3>
+    </a>
+    <a href="blog_post.html" class="blogPostLink" id="blog4">
+        <h3>Blog Post 4</h3>
+    </a>
 </div>
 <aside>
     <a href="https://gitlab.com/Jordan-Gillard">Gitlab</a>
