--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,10 @@
         <h3>Blog Post 4</h3>
     </a>
 </div>
+<br>
+<button class="likeButton">Like this page!</button>
+<br>
+<br>
 <aside>
     <a href="https://gitlab.com/Jordan-Gillard">Gitlab</a>
     <a href="https://github.com/Jordan-Gillard">Github</a>
