--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -18,6 +18,7 @@
     Udacity's
     frontend developer nanodegree program to ramp up my frontend skills!
 </p>
-<a href="index.html">Back to home page.</a>
+
+<footer><a href="index.html">Back to home page.</a></footer>
 </body>
 </html>
