--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -4,50 +4,70 @@
     <title>A Blog Post</title>
     <meta charset="UTF-8">
     <meta name="Blog Post" content="Lorem Ipsum Blog Post">
-    <link rel="stylesheet"type="text/css" href="../styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
 </header>
 <body>
 <h1>Sample Blog Post</h1>
+<div>Jordan Gillard</div>
 <div>March 26th, 2020</div>
 <article>
-<p>
-    <strong>Lorem ipsum dolor sit amet</strong>, consectetur adipiscing elit. Etiam urna eros, mattis in gravida semper, dictum vel est.
-    Duis hendrerit enim luctus lorem auctor, in mattis ex tincidunt. Nullam eu pellentesque metus. Vivamus ornare
-    molestie enim, ultrices rutrum tortor posuere at. Donec eu arcu quam. Nullam vitae gravida eros. Cras nec pulvinar
-    eros, et rutrum nisl. Vivamus quis mauris laoreet, sollicitudin ipsum eu, ullamcorper magna. Ut consequat fringilla
-    vestibulum. Sed bibendum convallis velit, non laoreet justo blandit sit amet. Sed nec felis augue. Integer
-    sollicitudin lobortis dignissim. <em>Etiam consequat varius velit</em> vitae iaculis. Aliquam et porta nibh, id scelerisque
-    augue. Praesent aliquet metus vitae fringilla consectetur.
-</p>
-<p>
-    <u>Aliquam egestas quam eget erat cursus efficitur.</u> Proin ut dictum justo, a blandit nisl. Duis non mi mi. Nunc et
-    sollicitudin lorem. Sed vel vulputate mauris, eu fringilla metus. Aenean dictum molestie sollicitudin. Sed in erat a
-    nunc auctor sollicitudin rhoncus eu nisi. Vestibulum nec enim lacus. Duis gravida sed odio vel auctor. Phasellus
-    tempor sapien at tristique ultricies.
-</p>
-<p>
-    <em>Nullam mattis diam leo, et ultrices lacus aliquam sed. Donec in tellus ipsum. Quisque tincidunt et neque scelerisque
-    consectetur. Sed ipsum nisi, laoreet a dui vitae, semper volutpat risus. Integer elementum ultrices leo, at mattis
-    dolor varius nec. Curabitur lacinia urna sagittis felis hendrerit mattis. Praesent eu sem erat. Donec eget sapien
-        ex.</em>
-</p>
-<p>
-    <blockquote cite="https://lipsum.com">Mauris molestie tortor id est imperdiet, at rhoncus leo varius. Cras eu placerat turpis. Cras luctus eget nibh non
-    blandit. Nam ullamcorper blandit ante, in porttitor dolor vehicula nec. Donec nec magna sit amet neque ornare
-    sagittis quis eu turpis. Suspendisse sed porta magna, sed lacinia elit. Phasellus feugiat commodo sapien, vel
-    laoreet sapien. Cras dignissim dolor dui, nec rhoncus diam gravida eget. Nunc rhoncus diam orci, id facilisis elit
-    venenatis in. Nunc at semper arcu, vel tincidunt mauris. Integer interdum condimentum tellus, id maximus mauris
-    tincidunt ac.</blockquote>
-</p>
-<p>
-    Suspendisse quis augue sit amet lacus congue efficitur. Nam lobortis felis ac volutpat ultrices. Proin tempus nisi
-    quis venenatis semper. Nunc pellentesque vulputate orci quis feugiat. Nam lobortis purus quis nulla auctor, eget
-    viverra tortor placerat. Pellentesque vehicula enim ac nibh venenatis iaculis. Cras in sapien porta, tincidunt metus
-    id, dictum velit. Nulla facilisi. Duis id facilisis mi, ac sagittis lacus.
-</p>
+    <p>My name is Jordan Gillard. I'm currently a student at Elmhurst College in Illinois. I really love my pet dog,
+        Ranger. I also know tons of Python, but am learning frontend stuff!</p>
+    <p>
+        <strong>Lorem ipsum dolor sit amet</strong>, consectetur adipiscing elit. Etiam urna eros, mattis in gravida
+        semper, dictum vel est.
+        Duis hendrerit enim luctus lorem auctor, in mattis ex tincidunt. Nullam eu pellentesque metus. Vivamus ornare
+        molestie enim, ultrices rutrum tortor posuere at. Donec eu arcu quam. Nullam vitae gravida eros. Cras nec
+        pulvinar
+        eros, et rutrum nisl. Vivamus quis mauris laoreet, sollicitudin ipsum eu, ullamcorper magna. Ut consequat
+        fringilla
+        vestibulum. Sed bibendum convallis velit, non laoreet justo blandit sit amet. Sed nec felis augue. Integer
+        sollicitudin lobortis dignissim. <em>Etiam consequat varius velit</em> vitae iaculis. Aliquam et porta nibh, id
+        scelerisque
+        augue. Praesent aliquet metus vitae fringilla consectetur.
+    </p>
+    <p>
+        <u>Aliquam egestas quam eget erat cursus efficitur.</u> Proin ut dictum justo, a blandit nisl. Duis non mi mi.
+        Nunc et
+        sollicitudin lorem. Sed vel vulputate mauris, eu fringilla metus. Aenean dictum molestie sollicitudin. Sed in
+        erat a
+        nunc auctor sollicitudin rhoncus eu nisi. Vestibulum nec enim lacus. Duis gravida sed odio vel auctor. Phasellus
+        tempor sapien at tristique ultricies.
+    </p>
+    <p>
+        <em>Nullam mattis diam leo, et ultrices lacus aliquam sed. Donec in tellus ipsum. Quisque tincidunt et neque
+            scelerisque
+            consectetur. Sed ipsum nisi, laoreet a dui vitae, semper volutpat risus. Integer elementum ultrices leo, at
+            mattis
+            dolor varius nec. Curabitur lacinia urna sagittis felis hendrerit mattis. Praesent eu sem erat. Donec eget
+            sapien
+            ex.</em>
+    </p>
+    <p>
+    <blockquote cite="https://lipsum.com">Mauris molestie tortor id est imperdiet, at rhoncus leo varius. Cras eu
+        placerat turpis. Cras luctus eget nibh non
+        blandit. Nam ullamcorper blandit ante, in porttitor dolor vehicula nec. Donec nec magna sit amet neque ornare
+        sagittis quis eu turpis. Suspendisse sed porta magna, sed lacinia elit. Phasellus feugiat commodo sapien, vel
+        laoreet sapien. Cras dignissim dolor dui, nec rhoncus diam gravida eget. Nunc rhoncus diam orci, id facilisis
+        elit
+        venenatis in. Nunc at semper arcu, vel tincidunt mauris. Integer interdum condimentum tellus, id maximus mauris
+        tincidunt ac.
+    </blockquote>
+    </p>
+    <p>
+        Suspendisse quis augue sit amet lacus congue efficitur. Nam lobortis felis ac volutpat ultrices. Proin tempus
+        nisi
+        quis venenatis semper. Nunc pellentesque vulputate orci quis feugiat. Nam lobortis purus quis nulla auctor, eget
+        viverra tortor placerat. Pellentesque vehicula enim ac nibh venenatis iaculis. Cras in sapien porta, tincidunt
+        metus
+        id, dictum velit. Nulla facilisi. Duis id facilisis mi, ac sagittis lacus.
+    </p>
 </article>
 </body>
 <footer>
+    <button>Share on Twitter</button>
+    <button>Share on Facebook</button>
+    <button>Share on LinkedIn</button>
     <a href="index.html">Back to home.</a>
 </footer>
 </html>
