Cleaned up code and finished project

--- a/templates/blog_post.html
+++ b/templates/blog_post.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
     <title>A Blog Post</title>
     <meta charset="UTF-8">
     <meta name="Blog Post" content="Lorem Ipsum Blog Post">
     <link rel="stylesheet" type="text/css" href="../styles/main.css">
-</header>
+</head>
 <body>
 <h1>Sample Blog Post</h1>
 <div>Jordan Gillard</div>
@@ -53,18 +53,18 @@
         venenatis in. Nunc at semper arcu, vel tincidunt mauris. Integer interdum condimentum tellus, id maximus mauris
         tincidunt ac.
     </blockquote>
-    </p>
-    <p>
+    <p id="lastParagraph">
         Suspendisse quis augue sit amet lacus congue efficitur. Nam lobortis felis ac volutpat ultrices. Proin tempus
         nisi
         quis venenatis semper. Nunc pellentesque vulputate orci quis feugiat. Nam lobortis purus quis nulla auctor, eget
         viverra tortor placerat. Pellentesque vehicula enim ac nibh venenatis iaculis. Cras in sapien porta, tincidunt
         metus
         id, dictum velit. Nulla facilisi. Duis id facilisis mi, ac sagittis lacus.
+        <img id="kittenPicture" src="../images/kitten.jpg" alt="A picture of a kitten">
     </p>
 </article>
 </body>
-<footer>
+<footer id="footer">
     <button>Share on Twitter</button>
     <button>Share on Facebook</button>
     <button>Share on LinkedIn</button>
