--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
     <title>About Me</title>
     <meta charset="UTF-8"/>
     <meta name="About Me" content="About me page with information about Jordan Gillard"/>
-    <link rel="stylesheet"type="text/css" href="../styles/main.css">
-</header>
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
+</head>
 <body>
 <h1>About Me</h1>
 <figure>
-    <img src="../images/headshot.jpeg" alt="A headshot of Jordan" width="200px">
+    <img id="headshot" src="../images/headshot.jpeg" alt="A headshot of Jordan">
     <figcaption>The author of this website, and clearly an html/css genius, Jordan Gillard</figcaption>
 </figure>
 <p>
@@ -18,7 +18,17 @@
     Udacity's
     frontend developer nanodegree program to ramp up my frontend skills!
 </p>
-
+<div id="blogThoughtsForm">
+    <form>
+        <label for="visitorName">Your Name: </label>
+        <input class="visitorInputs" id="visitorName" type="text">
+        <br/>
+        <label for="visitorThoughts">What do you think?</label>
+        <input class="visitorInputs" id="visitorThoughts" type="text">
+        <br/>
+        <input type="submit" value="Submit your thoughts!">
+    </form>
+</div>
 <footer><a href="index.html">Back to home page.</a></footer>
 </body>
 </html>
